--- a/style.css
+++ b/style.css
@@ -4,18 +4,55 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .background {
     position: relative;
 }
 
 .green-part {
     height: 15vh;
-    width: 100vw;
     background-color: #039789;
 }
 
 .grey-part {
     height: 85vh;
-    width: 100vw;
     background-color: #D9DCD5;
+}
+
+.container {
+    position: absolute;
+    top: 10%;
+    left: 15%;
+    background-color: #ebeaeb;
+    border: 2px solid grey;
+}
+
+.thumbnail img {
+    height: 70px;
+    border-radius: 50%;
+}
+
+.icons i {
+    color: #b1b0b0;
+    margin-right: 10px;
+}
+
+.notifications {
+    background-color: #8fdafd;
+}
+
+.bell {
+    border-radius: 50%;
+    color: #8fdafd;
+    padding: 10px;
+    background-color: white;
+}
+
+.search-icon {
+    background-color: white;
+    padding: 6px 20px;
+    border-right: 1px solid #ebeaeb;
 }
